Added input and display of data for all nosql documents.  Moved testing homepage to /test

--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -1,6 +1,6 @@
 <nav>
    <ul>
-      <a href="/">Home</a>
+      <a href="/test">Test Home</a>
       <a href="/communityPosts">Comm. Posts</a>
       <a href="/exchangeListings">Ex. Listing</a>
       <a href="/notifications">Notificaitons</a>
