--- a/backend-server/views/testHome.ejs
+++ b/backend-server/views/testHome.ejs
@@ -2,10 +2,10 @@
 
 <html>
    <head>
-      <title>Home</title>
+      <title>Test Home</title>
    </head>
    <body>
       <%-include('layouts/navbar');-%>
-      <h1>Home</h1>
+      <h1>Testing Homepage</h1>
    </body>
 </html>
