--- a/backend-server/views/exchangeListing.ejs
+++ b/backend-server/views/exchangeListing.ejs
@@ -6,5 +6,35 @@
    <body>
       <%-include('layouts/navbar');-%>
       <h1>Exchange Listings</h1>
+      <br/>
+      <br/>
+      <br/>
+      <form action="/exchangeListings/store" method="post" enctype="application/x-www-form-urlencoded">
+         <label for="user_ID">User ID</label>
+         <input type="text" name="user_ID">
+
+         <label for="ex_plant">Plant Name</label>
+         <input type="text" name="ex_plant">
+
+         <label for="ex_post_title">Title</label>
+         <input type="text" name="ex_post_title">
+
+         <label for="ex_post_body">Body</label>
+         <input type="text" name="ex_post_body">
+
+         <button type="submit">Submit</button>
+      </form>
+      <br/>
+      <br/>
+      <br/>
+      <% if (typeof exchangeListings !== 'undefined') { %>
+         <p>
+            <% exchangeListings.forEach(listing => { %>
+               <%= listing %> 
+               <br/>
+               <br/>
+            <% }) %>
+         </p>
+      <% } %>
    </body>
 </html>
