--- a/backend-server/views/notifications.ejs
+++ b/backend-server/views/notifications.ejs
@@ -25,6 +25,10 @@
          <button type="submit">Submit</button>
       </form>
       <br/>
+      <form action="/notifications/id" method="get">
+         <input type="text" name="id"  placeholder = "Search by id..." >
+         <button type="submit">Submit</button>
+      </form>
       <br/>
       <br/>
       <% if (typeof notifications !== 'undefined') { %>
