added query search for nosql routes

--- a/backend-server/views/communityPosts.ejs
+++ b/backend-server/views/communityPosts.ejs
@@ -28,6 +28,10 @@
          <button type="submit">Submit</button>
       </form>
       <br/>
+      <form action="/communityPosts/query" method="get">
+         <input type="text" name="string"  placeholder = "Search by description..." >
+         <button type="submit">Submit</button>
+      </form>
       <br/>
       
       <% if (typeof commPosts !== 'undefined') { %>
