--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -3,6 +3,6 @@
       <a href="/test">Test Home</a>
       <a href="/communityPosts">Comm. Posts</a>
       <a href="/exchangeListings">Ex. Listing</a>
-      <a href="/notifications">Notificaitons</a>
+      <a href="/notifications">Notifications</a>
    </ul>
 </nav>
