--- a/backend-server/views/notifications.ejs
+++ b/backend-server/views/notifications.ejs
@@ -30,6 +30,10 @@
          <button type="submit">Submit</button>
       </form>
       <br/>
+      <form action="/notifications/query" method="get">
+         <input type="text" name="string" placeholder = "Search by description...">
+         <button type="submit">Submit</button>
+      </form>
       <br/>
       <% if (typeof notifications !== 'undefined') { %>
          <p>
