moved all testing to ejs-testing

--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -1,8 +1,8 @@
 <nav>
    <ul>
-      <a href="/test">Test Home</a>
-      <a href="/communityPosts">Comm. Posts</a>
-      <a href="/exchangeListings">Ex. Listing</a>
-      <a href="/notifications">Notifications</a>
+      <a href="/ejs-testing">Test Home</a>
+      <a href="/ejs-testing/communityPosts">Comm. Posts</a>
+      <a href="/ejs-testing/exchangeListings">Ex. Listing</a>
+      <a href="/ejs-testing/notifications">Notifications</a>
    </ul>
 </nav>
