added cors, postgres pool, and plantType router with temp data

--- a/backend-server/views/notifications.ejs
+++ b/backend-server/views/notifications.ejs
@@ -10,7 +10,7 @@
       <br/>
       <br/>
       <br/>
-      <form action="/notificaitons/store" method="post" enctype="application/x-www-form-urlencoded">
+      <form action="notifications/store" method="post" enctype="application/x-www-form-urlencoded">
          <label for="user_ID">User ID</label>
          <input type="text" name="user_ID">
 
@@ -26,12 +26,12 @@
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <form action="/notifications/id" method="get">
+      <form action="ejs-testing/notifications/id" method="get">
          <input type="text" name="id"  placeholder = "Search by id..." >
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <form action="/notifications/query" method="get">
+      <form action="ejs-testing/notifications/query" method="get">
          <input type="text" name="string" placeholder = "Search by description...">
          <button type="submit">Submit</button>
       </form>
