--- a/backend-server/views/exchangeListings.ejs
+++ b/backend-server/views/exchangeListings.ejs
@@ -10,7 +10,7 @@
       <br/>
       <br/>
       <br/>
-      <form action="/exchangeListings/store" method="post" enctype="application/x-www-form-urlencoded">
+      <form action="/ejs-testing/exchangeListings/store" method="post" enctype="application/x-www-form-urlencoded">
          <label for="user_ID">User ID</label>
          <input type="text" name="user_ID">
 
@@ -26,12 +26,12 @@
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <form action="/exchangeListings/id" method="get">
+      <form action="/ejs-testing/exchangeListings/id" method="get">
          <input type="text" name="id"  placeholder = "Search by id..." >
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <form action="/exchangeListings/query" method="get">
+      <form action="/ejs-testing/exchangeListings/query" method="get">
          <input type="text" name="string"  placeholder = "Search by description..." >
          <button type="submit">Submit</button>
       </form>
@@ -66,7 +66,7 @@
                const promptText = "Do you really want to delete the record:\n" + e.target.value + "?";
                if(confirm(promptText)){
                   console.log("Deleted record: " + e.target.value);
-                  const deletePost = fetch('http://localhost:3000/exchangeListings/delete/' + e.target.value, {
+                  const deletePost = fetch('http://localhost:3000/ejs-testing/exchangeListings/delete/' + e.target.value, {
                      method:'DELETE'
                   })
                }
