added forum posts controller route and ejs page

--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -4,6 +4,7 @@
       <a href="/ejs-testing/communityPosts">Comm. Posts</a>
       <a href="/ejs-testing/exchangeListings">Ex. Listing</a>
       <a href="/ejs-testing/notifications">Notifications</a>
+      <a href="/ejs-testing/forumPosts">Forum Posts</a>
       <a href="/ejs-testing/plantTypes">Plant Types</a>
    </ul>
 </nav>
