--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -5,6 +5,6 @@
       <a href="/ejs-testing/exchangeListings">Ex. Listing</a>
       <a href="/ejs-testing/notifications">Notifications</a>
       <a href="/ejs-testing/forumPosts">Forum Posts</a>
-      <a href="/ejs-testing/plantTypes">Plant Types</a>
+      <a href="/ejs-testing/plants">Plants</a>
    </ul>
 </nav>
