--- a/backend-server/views/plants.ejs
+++ b/backend-server/views/plants.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Plant Types</title>
+      <title>Plants</title>
       <%-include('layouts/header');-%>
    </head>
    <body>
@@ -10,9 +10,15 @@
       <br/>
       <br/>
       <br/>
-      <form action="/ejs-testing/plantType/store" method="post" enctype="application/x-www-form-urlencoded">
-         <label for="plant_type_id">Plant Type Id</label>
-         <input type="text" name="plant_type_id">
+      <form action="/ejs-testing/plants/store" method="post" enctype="application/x-www-form-urlencoded">
+         <label for="plant_id">Plant Id</label>
+         <input type="text" name="plant_id">
+
+         <label for="common_name">Common Name</label>
+         <input type="text" name="common_name">
+
+         <label for="latin_name">Latin Name</label>
+         <input type="text" name="latin_name">
 
          <label for="light_level">Light Level</label>
          <input type="text" name="light_level">
@@ -32,51 +38,45 @@
          <label for="soil_type">Soil Type</label>
          <input type="text" name="soil_type">
 
-         <label for="common_disease">Common Disease</label>
-         <input type="text" name="common_disease">
-
-         <label for="common_pest">Common Pest</label>
-         <input type="text" name="common_disease">
-
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <form action="/ejs-testing/plantType/id" method="get">
+      <form action="/ejs-testing/plants/id" method="get">
          <input type="text" name="id"  placeholder = "Search by id..." >
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <form action="/ejs-testing/plantType/query" method="get">
+      <form action="/ejs-testing/plants/query" method="get">
          <input type="text" name="string" placeholder = "Search by description...">
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <% if (typeof plantTypes !== 'undefined') { %>
-         <span id="plantTypes-selectable" hidden><%=JSON.stringify(plantTypes);%></span>
+      <% if (typeof plants !== 'undefined') { %>
+         <span id="plants-selectable" hidden><%=JSON.stringify(plants);%></span>
          <div>
-            <% plantTypes.forEach(plantType => { %>
+            <% plants.forEach(plant => { %>
                <%= "{" %> 
-               <div>ID: <%=plantType.plant_type_id%></div> 
-               <div>Light Level: <%=plantType.light_level%></div>
-               <div>Min. Temp: <%=plantType.min_temp%></div>
-               <div>Max. Temp: <%=plantType.max_temp%></div>
-               <div>Rec. Temp: <%=plantType.max_temp%></div>
-               <div>Hardiness Zone: <%=plantType.hardiness_zone%></div>
-               <div>Soil Type: <%=plantType.soil_type%></div>
-               <div>Common Disease: <%=plantType.common_disease%></div>
-               <div>Common Pest: <%=plantType.common_pest%></div>
+               <div>ID: <%=plant.plant_id%></div>
+               <div>Common Name: <%=plant.common_name%></div> 
+               <div>Latin Name: <%=plant.latin_name%></div>
+               <div>Light Level: <%=plant.light_level%></div>
+               <div>Min. Temp: <%=plant.min_temp%></div>
+               <div>Max. Temp: <%=plant.max_temp%></div>
+               <div>Rec. Temp: <%=plant.max_temp%></div>
+               <div>Hardiness Zone: <%=plant.hardiness_zone%></div>
+               <div>Soil Type: <%=plant.soil_type%></div>
                <%= "}" %> 
                <br/>
-               <button class = "edit-record" value="<%=plantType.plant_type_id%>">Edit</button>
+               <button class = "edit-record" value="<%=plant.plant_id%>">Edit</button>
                &emsp;
-               <button class = "delete-record" value="<%=plantType.plant_type_id%>">Delete</button>
+               <button class = "delete-record" value="<%=plant.plant_id%>">Delete</button>
                <br/>
             <% }) %>
          </div>
       <% } %>
       <script>
-         var notifications = JSON.parse($('#plantTypes-selectable').text());
-         console.log(plantTypes);
+         //var plants = JSON.parse($('#plants-selectable').text());
+         //console.log(plants);
          
          const deleteButtons = document.querySelectorAll('.delete-record').forEach(button=>{
             button.addEventListener('click',  (e)=>{
@@ -84,7 +84,7 @@
                const promptText = "Do you really want to delete the record:\n" + e.target.value + "?";
                if(confirm(promptText)){
                   console.log("Deleted record: " + e.target.value);
-                  const deletePost = fetch('http://localhost:3000/ejs-testing/delete/' + e.target.value, {
+                  const deletePost = fetch('http://localhost:3000/ejs-testing/plants/delete/' + e.target.value, {
                      method:'DELETE'
                   })
                }
