added userPlants to ejs and prod

--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -6,5 +6,6 @@
       <a href="/ejs-testing/notifications">Notifications</a>
       <a href="/ejs-testing/forumPosts">Forum Posts</a>
       <a href="/ejs-testing/plants">Plants</a>
+      <a href="/ejs-testing/userPlants">User Plants</a>
    </ul>
 </nav>
