--- a/backend-server/views/plants.ejs
+++ b/backend-server/views/plants.ejs
@@ -6,7 +6,7 @@
    </head>
    <body>
       <%-include('layouts/navbar');-%>
-      <h1>Plant Types</h1>
+      <h1>Plants</h1>
       <br/>
       <br/>
       <br/>
