--- a/backend-server/views/plants.ejs
+++ b/backend-server/views/plants.ejs
@@ -65,6 +65,8 @@
                <div>Rec. Temp: <%=plant.max_temp%></div>
                <div>Hardiness Zone: <%=plant.hardiness_zone%></div>
                <div>Soil Type: <%=plant.soil_type%></div>
+               <div><img src="<%=plant.image %>" width="50px" height="50px"/></div>
+               
                <%= "}" %> 
                <br/>
                <button class = "edit-record" value="<%=plant.plant_id%>">Edit</button>
