--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -7,5 +7,6 @@
       <a href="/ejs-testing/forumPosts">Forum Posts</a>
       <a href="/ejs-testing/plants">Plants</a>
       <a href="/ejs-testing/userPlants">User Plants</a>
+      <a href="/ejs-testing/gardens">Gardens</a>
    </ul>
 </nav>
