--- a/backend-server/views/gardens.ejs
+++ b/backend-server/views/gardens.ejs
@@ -31,6 +31,11 @@
          <button type="submit">Submit</button>
       </form>
       <br/>
+      <form action="/ejs-testing/gardens/getByUser/id" method="get">
+         <input type="text" name="id"  placeholder = "Search by user id..." >
+         <button type="submit">Submit</button>
+      </form>
+      <br/>
       <form action="/ejs-testing/gardens/search" method="get">
          <input type="text" name="string" placeholder = "Search by name...">
          <button type="submit">Submit</button>
