--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -8,5 +8,13 @@
       <a href="/ejs-testing/plants">Plants</a>
       <a href="/ejs-testing/userPlants">User Plants</a>
       <a href="/ejs-testing/gardens">Gardens</a>
+      <a href="/ejs-testing/users">Users</a>
+      <% if(!currentUser) { %>
+         <a class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>" href="/ejs-testing/login">Log In</a>
+         <a class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>" href="/ejs-testing/register">Sign Up</a>
+         <% } else { %>
+         <a>Signed in as <%= currentUser.username %></a>
+         <a href="/ejs-testing/logout">Log Out</a>
+      <% } %>
    </ul>
 </nav>
