refactored postgres ejs

--- a/backend-server/views/plants.ejs
+++ b/backend-server/views/plants.ejs
@@ -38,15 +38,18 @@
          <label for="soil_type">Soil Type</label>
          <input type="text" name="soil_type">
 
+         <label for="img">img</label>
+         <input type="text" name="img">
+
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <form action="/ejs-testing/plants/id" method="get">
+      <form action="/ejs-testing/plants/key" method="get">
          <input type="text" name="key"  placeholder = "Search by key..." >
          <button type="submit">Submit</button>
       </form>
       <br/>
-      <form action="/ejs-testing/plants/query" method="get">
+      <form action="/ejs-testing/plants/search" method="get">
          <input type="text" name="string" placeholder = "Search by description...">
          <button type="submit">Submit</button>
       </form>
