users now get hashed passwords and jwt token. token feature is currently broken

--- a/backend-server/views/login.ejs
+++ b/backend-server/views/login.ejs
@@ -1,11 +1,11 @@
+
+<%-include('layouts/navbar');-%>
 <div class="container">
 	<div class="row">
 
 		<h1 style="text-align: center;">
 			Log In to SproutShare
 		</h1>
-
-
 			<form action="/ejs-testing/login" method="POST">
 				<div class="form-group">
 					<input class="form-control" type="text" name="username" placeholder="username">	
@@ -17,6 +17,6 @@
 					Log In
 				</button>
 			</form>
-			<a href="/ejs-testing/users">Go Back</a>
+			<a href="/ejs-testing/sproutShareUsers">Go Back</a>
 	</div>
 </div>
